[gd_scene load_steps=2 format=3 uid="uid://f16ykrbwt2uj"]

[ext_resource type="Script" uid="uid://cds12mnj0wijr" path="res://scripts/gui.gd" id="1_efmwq"]

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_efmwq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -5.0
offset_right = 5.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 44
text = "0"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -110.0
offset_right = 96.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Start Game"

[connection signal="pressed" from="Control/StartButton" to="." method="_on_start_button_pressed"]
